--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -1,46 +1,71 @@
-name: Flutter CI (Simple)
+name: Flutter Builder
 
 on:
   push:
-    branches: [ "main", "master" ]
+    branches: [ main, master ]
   pull_request:
-    branches: [ "main", "master" ]
+    branches: [ "**" ]
+  workflow_dispatch:
 
 jobs:
-  build:
+  build-android:
+    name: Build Android APK (release)
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-java@v4
+      - name: Set up Java
+        uses: actions/setup-java@v4
         with:
-          distribution: 'zulu'
-          java-version: '17'
+          distribution: temurin
+          java-version: "17"
 
-      - uses: subosito/flutter-action@v2
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
         with:
-          channel: 'stable'
-          flutter-version: '3.32.1'
+          flutter-version: stable
+          channel: stable
           cache: true
 
-      - name: Prepare dependency overrides (use published ultralytics_yolo if local path missing)
-        run: |
-          if [ ! -d "../ultralytics_yolo" ]; then
-            echo "dependency_overrides:\n  ultralytics_yolo: any" > pubspec_overrides.yaml
-            echo "Created pubspec_overrides.yaml to use published ultralytics_yolo"
-          else
-            echo "Found local ../ultralytics_yolo; using path dependency"
-          fi
+      - name: Flutter version
+        run: flutter --version
 
-      - name: Get Dependencies
+      - name: Fetch dependencies
         run: flutter pub get
 
-      - name: Build APK
-        run: flutter build apk --release --no-tree-shake-icons
+      - name: Build Android APK (release)
+        run: flutter build apk --release
 
-      - name: Upload APK
+      - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
-          name: app-android-release
+          name: app-android-apk-release
           path: build/app/outputs/flutter-apk/app-release.apk
+          if-no-files-found: error
+
+  # Optional: iOS build (no signing). Uncomment if desired and you have macOS runners enabled.
+  # build-ios:
+  #   name: Build iOS (no codesign)
+  #   runs-on: macos-latest
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v4
+  #     - name: Set up Xcode
+  #       run: sudo xcode-select -s /Applications/Xcode.app
+  #     - name: Set up Flutter
+  #       uses: subosito/flutter-action@v2
+  #       with:
+  #         flutter-version: stable
+  #         channel: stable
+  #         cache: true
+  #     - name: Fetch dependencies
+  #       run: flutter pub get
+  #     - name: Build iOS (no codesign)
+  #       run: flutter build ios --release --no-codesign
+  #     - name: Upload iOS build products
+  #       uses: actions/upload-artifact@v4
+  #       with:
+  #         name: app-ios-build-release
+  #         path: build/ios/iphoneos
+  #         if-no-files-found: error
